# yipit-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DATA-MODEL.md  PLAN.md  README.md  REVIEW-METHOD.md  SIMPLICITY.md  STANDARDS.md  docker-compose.yml  pyproject.toml
backend/: observability.py
backend/api/: app.py  main.py  schemas.py
backend/mcp/: main.py  server.py
backend/services/: companies.py  db.py  errors.py  estimates.py  kpi_service.py  models.py
backend/tests/: conftest.py  test_architecture.py  test_companies_service.py  test_db.py  test_estimates_service.py  test_health.py  test_mcp_entrypoint.py  test_mcp_tools.py  test_models.py  test_observability.py  test_overview_service.py  test_rest_api.py  test_schema.py  test_seed.py
db/: schema.sql  seed.py
db/docker-init/: 01_create_test_db.sql
docs/: architecture.md
docs/adr/: ADR-001-async-service-layer.md  ADR-002-mcp-package-location.md  ADR-003-kpi-service-facade.md
docs/specs/: mcp-server.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  state.ts
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: AsOfBadge.tsx  ChartPanel.tsx  CompanyBrowser.tsx  HistoryQtdChart.tsx  KpiPicker.tsx  SectorFilter.tsx  TrajectoryPanel.tsx
frontend/src/hooks/: queries.ts
frontend/src/lib/: chart.test.ts  chart.ts  csv.test.ts  csv.ts  download.ts
