[project]
name = "yipit-kpi"
version = "0.1.0"
description = "YipitData KPI Portal + MCP — shared services layer, two transports (FastMCP + FastAPI REST)."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Isolated: the ergonomics eval (Phase 8) drives Claude Haiku. The core install
# needs no LLM SDK — install with `uv sync --extra eval` only when running the eval.
eval = ["anthropic>=0.40"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

# Virtual project: this root only manages a shared venv for /backend and /mcp.
# No build/packaging machinery (SIMPLICITY) — modules are imported via pythonpath.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
include = ["backend", "mcp"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
